# jpeg-codec-cpp

./: CMakeLists.txt  README.md  libjpeg-turbo.patch
headers/jpeg-codec-cpp/: jpeg.h
sources/: jpeg.cc
